Getting pbkdf2 browserify problem, so built that browserified stand-alone and remove require(crypto) from this browserify command (to ensure window.crypto is the only one used).

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
   <script src='./fxa-client.js'></script>
+  <script src='./pbkdf2-browser.js'></script>
  <script>
 var FxAccountsClient = FxAccountClient;
+crypto.pbkdf2 = PBKDF.pbkdf2;
+crypto.pbkdf2Sync = PBKDF.pbkdf2Sync;
+
 </script>
 
  <script src='./man.js' ></script>
